--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
             <p class="col-md-8 fs-4">Step into a world of insights and inspiration with our captivating video
                 interviews. Immerse yourself in candid conversations with thought leaders, pioneers, and visionaries
                 from various fields.</p>
-                <a class="btn btn-outline-success btn-lg" href="{% url 'video' %}" role="button">Watch Now</a>
+                <a class="btn btn-outline-success btn-lg" href="#" role="button">Watch Now</a>
         </div>
     </div>
 
