--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,23 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>{% block title %}Jaffery Sports Club{% endblock %}</title>
     {% load static %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="{% static 'css/animate.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <style>
         .material-symbols-outlined {
-          font-variation-settings:
-          'FILL' 1,
-          'wght' 700,
-          'GRAD' 0,
-          'opsz' 48,
+            font-variation-settings:
+                'FILL' 1,
+                'wght' 700,
+                'GRAD' 0,
+                'opsz' 48,
         }
     </style>
 
@@ -37,81 +38,92 @@
             </button>
 
             <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
-                
+
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'index' %}">{% trans 'Home'%}</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                             {% trans 'About Us' %}
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">{% trans 'History'%}</a></li>
-                          <li><a class="dropdown-item" href="{% url 'founders' %}">{% trans 'Founding Members'%}</a></li>
-                          <li><a class="dropdown-item" href="{% url 'timeline' %}">{% trans 'Timeline'%}</a></li>
+                            <li><a class="dropdown-item" href="#">{% trans 'History'%}</a></li>
+                            <li><a class="dropdown-item" href="{% url 'founders' %}">{% trans 'Founding Members'%}</a>
+                            </li>
+                            <li><a class="dropdown-item" href="{% url 'chairmans' %}">{% trans 'Past Chairman'%}</a>
+                            </li>
+                            <li><a class="dropdown-item" href="{% url 'timeline' %}">{% trans 'Timeline'%}</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                             {% trans 'Sports'%}
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="{% url 'sports' main_category_id=1 %}">{% trans 'Sports Overview'%}</a></li>
-                          <li><a class="dropdown-item" href="#">{% trans 'Sports Teams'%}</a></li>
-                          <li><a class="dropdown-item" href="{% url 'album' child_category_id=2 %}">{% trans 'Veterans'%}</a></li>
-                          <li><a class="dropdown-item" href="#">{% trans 'Achievements'%}</a></li>
-                          
+                            <li><a class="dropdown-item" href="{% url 'sports' main_category_id=1 %}">{% trans 'Sports
+                                    Overview'%}</a></li>
+                            <li><a class="dropdown-item" href="#">{% trans 'Sports Teams'%}</a></li>
+                            <li><a class="dropdown-item" href="{% url 'album' child_category_id=2 %}">{% trans
+                                    'Veterans'%}</a></li>
+                            <li><a class="dropdown-item" href="#">{% trans 'Achievements'%}</a></li>
+
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                             {% trans 'Events'%}
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">{% trans 'Upcoming Events'%}</a></li>
-                          <li><a class="dropdown-item" href="#">{% trans 'Past Events'%}</a></li>
-                          <li><a class="dropdown-item" href="#">{% trans 'Achievements'%}</a></li>
+                            <li><a class="dropdown-item" href="#">{% trans 'Upcoming Events'%}</a></li>
+                            <li><a class="dropdown-item" href="#">{% trans 'Past Events'%}</a></li>
+                            <li><a class="dropdown-item" href="#">{% trans 'Achievements'%}</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">{% trans 'Projects'%}</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                             {% trans 'Celebration'%}
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">{% trans '75 years Celebration'%}</a></li>
-                          <li><a class="dropdown-item" href="#">{% trans '100 years Celebration'%}</a></li>
+                            <li><a class="dropdown-item" href="#">{% trans '75 years Celebration'%}</a></li>
+                            <li><a class="dropdown-item" href="#">{% trans '100 years Celebration'%}</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                             {% trans 'Content'%}
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="{% url 'video' %}">{% trans 'Video Interviews'%}</a></li>
-                          <li><a class="dropdown-item" href="#">{% trans 'Books by Members'%}</a></li>
+                            <li><a class="dropdown-item" href="{% url 'videolist' %}">{% trans 'Video Interviews'%}</a></li>
+                            <li><a class="dropdown-item" href="#">{% trans 'Books by Members'%}</a></li>
                         </ul>
                     </li>
 
                 </ul>
-                
+
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
                     <div class="dropdown">
-                      <button class="btn btn-outline-success dropdown-toggle p-1" type="button" id="languageDropdown"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        {{ lang_name }}{% trans 'Lang' %}
-                      </button>
-                      <ul class="dropdown-menu" aria-labelledby="languageDropdown">
-                        {% get_available_languages as languages %}
-                        {% for lang_code, lang_name in languages %}
-                        <li><a class="dropdown-item" href="{% url 'set_language' lang_code %}">{{ lang_name }}</a></li>
-                        {% endfor %}
-                      </ul>
+                        <button class="btn btn-outline-success dropdown-toggle p-1" type="button" id="languageDropdown"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            {{ lang_name }}{% trans 'Lang' %}
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="languageDropdown">
+                            {% get_available_languages as languages %}
+                            {% for lang_code, lang_name in languages %}
+                            <li><a class="dropdown-item" href="{% url 'set_language' lang_code %}">{{ lang_name }}</a>
+                            </li>
+                            {% endfor %}
+                        </ul>
                     </div>
-                  </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -119,12 +131,77 @@
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
-    
+    <div class="container">
+        <footer class="py-5 mt-auto">
+            <div class="row">
+                <div class="col-6 col-md-2 mb-3">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-6 col-md-2 mb-3">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-6 col-md-2 mb-3">
+                    <h5>Section</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-md-5 offset-md-1 mb-3">
+                    <form>
+                        <h5>Subscribe to our newsletter</h5>
+                        <p>Monthly digest of what's new and exciting from us.</p>
+                        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                            <label for="newsletter1" class="visually-hidden">Email address</label>
+                            <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                            <button class="btn btn-primary" type="button">Subscribe</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+                <p>&copy; 2023 Company, Inc. All rights reserved.</p>
+                <ul class="list-unstyled d-flex">
+                    <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
+                                <use xlink:href="#twitter" />
+                            </svg></a></li>
+                    <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
+                                <use xlink:href="#instagram" />
+                            </svg></a></li>
+                    <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
+                                <use xlink:href="#facebook" />
+                            </svg></a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
+
 
     <!-- Link to Bootstrap JS (Popper.js and Bootstrap scripts are required for some features) -->
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    
+
 
 </body>
 
