--- a/app/templates/founders.html
+++ b/app/templates/founders.html
@@ -10,8 +10,8 @@
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">{% trans 'Our Founders'%}</h1>
-                <p class="lead text-body-secondary">{% blocktrans %}Welcometothepage dedicated to our founders, who are the
+                <h1 class="text-white">{% trans 'Our Founders'%}</h1>
+                <p class="text-white">{% blocktrans %}Welcometothepage dedicated to our founders, who are the
                     cornerstone of our organization. Their collective vision and courage have paved our way to success.
                     Their portraits capture their dedication and innovation. Emerging from the backdrop, their
                     leadership has elevated our journey. Today, we stand on their shoulders, guided by their spirit, as
