--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Jaffery Sports Club{% endblock %}</title>
     {% load static %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -12,9 +12,15 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
     <style>
+        body {
+            background-color: #6A8371;
+            background-size: cover;
+            /* Adjust as needed */
+            background-repeat: no-repeat;
+        }
+
         .material-symbols-outlined {
             font-variation-settings:
                 'FILL' 1,
@@ -28,7 +34,8 @@
 
 <body>
     <!-- Static Navigation Bar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded bg-success" aria-label="Thirteenth navbar example">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded bg-success background-color: transparent;"
+        aria-label="Thirteenth navbar example">
         <div class="container-fluid">
             <a class="navbar-brand col-lg-3 me-0" href="#">Jaffery Sports Club</a>
 
@@ -63,8 +70,8 @@
                             {% trans 'Sports'%}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{% url 'sports' main_category_id=1 %}">{% trans 'Sports
-                                    Overview'%}</a></li>
+                            <li><a class="dropdown-item" href="{% url 'sports' main_category_id=1 %}">{% trans
+                                    'SportsOverview'%}</a></li>
                             <li><a class="dropdown-item" href="#">{% trans 'Sports Teams'%}</a></li>
                             <li><a class="dropdown-item" href="{% url 'album' child_category_id=2 %}">{% trans
                                     'Veterans'%}</a></li>
@@ -102,7 +109,8 @@
                             {% trans 'Content'%}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{% url 'videolist' %}">{% trans 'Video Interviews'%}</a></li>
+                            <li><a class="dropdown-item" href="{% url 'videolist' %}">{% trans 'Video Interviews'%}</a>
+                            </li>
                             <li><a class="dropdown-item" href="#">{% trans 'Books by Members'%}</a></li>
                         </ul>
                     </li>
@@ -132,16 +140,14 @@
         {% block content %}{% endblock %}
     </div>
     <div class="container">
-        <footer class="py-5 mt-auto">
+        <footer class="py-5">
             <div class="row">
                 <div class="col-6 col-md-2 mb-3">
                     <h5>Section</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Photos</a></li>
+
                     </ul>
                 </div>
 
@@ -149,10 +155,8 @@
                     <h5>Section</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Photos</a></li>
+
                     </ul>
                 </div>
 
@@ -160,10 +164,8 @@
                     <h5>Section</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Photos</a></li>
+
                     </ul>
                 </div>
 
@@ -181,7 +183,7 @@
             </div>
 
             <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-                <p>&copy; 2023 Company, Inc. All rights reserved.</p>
+                <p>&copy; 2023 Jaffery Sports Club. All rights reserved.</p>
                 <ul class="list-unstyled d-flex">
                     <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24">
                                 <use xlink:href="#twitter" />
@@ -200,7 +202,7 @@
 
     <!-- Link to Bootstrap JS (Popper.js and Bootstrap scripts are required for some features) -->
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 
 </body>
