--- a/app/templates/video_list.html
+++ b/app/templates/video_list.html
@@ -8,36 +8,39 @@
 <h1>Video List</h1>
 {% for video in videos %}
 <section class="py-5 text-center container">
-    <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">{{ video.title }}</h1>
-        <p class="lead text-body-secondary">{{ video.description }}</p>
-      </div>
+  <div class="row py-lg-5">
+    <div class="col-lg-6 col-md-8 mx-auto">
+      <h1 class="fw-light">{{ video.title }}</h1>
+      <p class="lead text-body-secondary">{{ video.description }}</p>
     </div>
-  </section>
-  <div class="album py-5 bg-body-tertiary">
-    <div class="container">
-        
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        {% for part in video.parts.all|dictsort:"part_number" %}
-        <div class="col">
-          <div class="card shadow-sm">
-            <a href="{{ part.video_file.url }}">Download Part</a>
-            <div class="card-body">
-              <p class="card-text">Part {{ part.part_number }}: {{ video.title }}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
+  </div>
+</section>
+<div class="album py-5">
+  <div class="container">
+
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      {% for part in video.parts.all|dictsort:"part_number" %}
+      <div class="col">
+        <div class="card shadow-sm">
+          <video controls>
+            <source src="{{ part.video_file.url }}" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+          <div class="card-body">
+            <p class="card-text">Part {{ part.part_number }}: {{ video.title }}</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                
+                <a href="{% url 'video_player' video.id %}" class="btn btn-outline-success">watch</a>
               </div>
+              <small class="text-body-secondary">9 mins</small>
             </div>
           </div>
-        </div>      
-        {% endfor %}
+        </div>
+      </div>
+      {% endfor %}
     </div>
   </div>
   {% endfor %}
-  
-{% endblock %}
+
+  {% endblock %}
