--- a/app/templates/past_event.html
+++ b/app/templates/past_event.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block title %}About Us - My Django App{% endblock %}
+{% block title %}{{ main_category.name }}{% endblock %}
 
 {% block content %}
 {% load static %}
