--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,6 +51,7 @@
         </div>
     </div>
     <div class="p-5 my-4 bg-primary rounded-3">
+      <h2 class="display-7 fw-bold text-light text-center">{% trans 'Message from our leaders'%}</h2>
         <div class="container-fluid py-1">
             <div class="row text-center">
                 <div class="col-md-12">
@@ -65,11 +66,11 @@
                           numquam iure provident voluptate esse quasi, voluptas nostrum quisquam!"
                         </p>
                         <div class="mt-5 mb-4">
-                          <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(2).webp"
+                          <img src="{% static 'user.png' %}"
                             class="rounded-circle img-fluid shadow-1-strong" alt="smaple image" width="100"
                             height="100" />
                         </div>
-                        <p class=" mb-0 text-light">- Anna Morian</p>
+                        <p class=" mb-0 text-light">- Chairman 1</p>
                       </div>
             
                       <!-- Single item -->
@@ -80,11 +81,11 @@
                           elit."
                         </p>
                         <div class="mt-5 mb-4">
-                          <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(31).webp"
+                          <img src="{% static 'user.png' %}"
                             class="rounded-circle img-fluid shadow-1-strong" alt="smaple image" width="100"
                             height="100" />
                         </div>
-                        <p class=" mb-0 text-light">- Teresa May</p>
+                        <p class=" mb-0 text-light">- Chairman 2</p>
                       </div>
             
                       <!-- Single item -->
@@ -95,11 +96,11 @@
                           maiores."
                         </p>
                         <div class="mt-5 mb-4">
-                          <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp"
+                          <img src="{% static 'user.png' %}"
                             class="rounded-circle img-fluid shadow-1-strong" alt="smaple image" width="100"
                             height="100" />
                         </div>
-                        <p class=" mb-0 text-light">- Kate Allise</p>
+                        <p class=" mb-0 text-light">- Chairman 3</p>
                       </div>
                     </div>
                     <!-- Inner -->
@@ -121,5 +122,45 @@
               </div>
         </div>
     </div>
+    
+  <div class="px-4 pt-5 my-1 text-center border-bottom">
+    <h1 class="display-6 fw-bold text-light">{% trans '75 YEARS ANNIVESSARY' %}</h1>
+    <div class="col-lg-10 mx-auto">
+      <p class="lead mb-4 text-light">Discover the rich legacy of our sports club as we celebrate 75 glorious years of triumphs and camaraderie. Immerse yourself in our remarkable journey through the pages of our special anniversary book. Join us in reliving the milestones that have shaped our club's history. While we're currently celebrating our 100th anniversary, this book is a tribute to the incredible 75 years that paved the way for our enduring success. Read Now and relish the memories!.</p>
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+        <a class="btn btn-primary" href="{% url 'pdf' pdf_id=2 %}" role="button">{% trans 'Read Now'%}</a>
+        
+      </div>
+    </div>
+    <div class="overflow-hidden" style="max-height: 40vh;">
+      <div class="container px-5">
+        <img src="{% static '75.png' %}" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="500" height="900" loading="lazy">
+      </div>
+    </div>
+  </div>
+  <div class="container col-xl-12 col-xxl-10 px-4 py-5">
+    <div class="row align-items-center g-lg-5 py-5">
+      <div class="col-lg-7 text-center text-lg-start">
+        <h1 class="display-4 fw-bold lh-1  mb-3 text-light">Subscribe Now</h1>
+        <p class="col-lg-12  fs-5 text-light">Join us in commemorating our momentous 100th anniversary by subscribing today to receive exclusive updates via email or SMS, ensuring you're always in the loop about fresh content and the latest news on our community. Embrace this opportunity to stay connected and engaged with our vibrant community as we celebrate a century of remarkable achievements. Don't miss out – subscribe now and be a part of our ongoing legacy!.</p>
+      </div>
+      <div class="col-md-10 mx-auto col-lg-5">
+        <form class="p-4 p-md-5 border rounded-3 bg-light">
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Email address</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="number" class="form-control" id="floatingPassword" placeholder="Phone Number">
+            <label for="floatingPassword">Phone Number</label>
+          </div>  
+          <hr class="my-4">        
+          <button class="w-100 btn btn-lg btn-primary" type="submit">Subscribe</button>
+          <hr class="my-4">
+          <small class="text-body-secondary">You have the flexibility to provide either your email address,phone number or both– choose whichever works best for you.</small>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
