--- a/app/templates/founders.html
+++ b/app/templates/founders.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}Patrons{% endblock %}
+{% block title %}{% trans 'Our Founders'%}{% endblock %}
 
 {% block content %}
 {% load static %}
