--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -227,26 +227,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 col-md-3 mb-3">
-                    <h5>Club</h5>
+                    <h5>{% trans 'Club' %}</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Founders</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Past Chairmans</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">{% trans 'Founders' %}</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">{% trans 'Past Chairmans' %}</a></li>
                     </ul>
                 </div>
     
                 <div class="col-6 col-md-3 mb-3 ">
-                    <h5>Sports</h5>
+                    <h5>{% trans 'Sports' %}</h5>
                     <ul class="nav flex-column ">
-                        <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-light">Overview</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Veterans</a></li>
+                        <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-light">{% trans 'Overview' %}</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">{% trans 'Veterans' %}</a></li>
                     </ul>
                 </div>
     
                 <div class="col-6 col-md-3 mb-3">
-                    <h5>Media</h5>
+                    <h5>{% trans 'Media' %}</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Videos</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Books</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">{% trans 'Videos' %}</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">{% trans 'Books' %}</a></li>
                     </ul>
                 </div>
                 
