--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -126,7 +126,11 @@
   <div class="px-4 pt-5 my-1 text-center border-bottom">
     <h1 class="display-6 fw-bold text-light">{% trans '75 YEARS ANNIVESSARY' %}</h1>
     <div class="col-lg-10 mx-auto">
-      <p class="lead mb-4 text-light">Discover the rich legacy of our sports club as we celebrate 75 glorious years of triumphs and camaraderie. Immerse yourself in our remarkable journey through the pages of our special anniversary book. Join us in reliving the milestones that have shaped our club's history. While we're currently celebrating our 100th anniversary, this book is a tribute to the incredible 75 years that paved the way for our enduring success. Read Now and relish the memories!.</p>
+      <p class="lead mb-4 text-light">
+      {% blocktrans %}
+        Discover the rich legacy of our sports club as we celebrate 75 glorious years of triumphs and camaraderie. Immerse yourself in our remarkable journey through the pages of our special anniversary book. Join us in reliving the milestones that have shaped our club's history. While we're currently celebrating our 100th anniversary, this book is a tribute to the incredible 75 years that paved the way for our enduring success. Read Now and relish the memories!
+      {% endblocktrans %}
+      .</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
         <a class="btn btn-primary" href="{% url 'pdf' pdf_id=2 %}" role="button">{% trans 'Read Now'%}</a>
         
@@ -142,22 +146,30 @@
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-lg-7 text-center text-lg-start">
         <h1 class="display-4 fw-bold lh-1  mb-3 text-light">Subscribe Now</h1>
-        <p class="col-lg-12  fs-5 text-light">Join us in commemorating our momentous 100th anniversary by subscribing today to receive exclusive updates via email or SMS, ensuring you're always in the loop about fresh content and the latest news on our community. Embrace this opportunity to stay connected and engaged with our vibrant community as we celebrate a century of remarkable achievements. Don't miss out – subscribe now and be a part of our ongoing legacy!.</p>
+        <p class="col-lg-12  fs-5 text-light">
+        {% blocktrans %}
+          Join us in commemorating our momentous 100th anniversary by subscribing today to receive exclusive updates via email or SMS, ensuring you're always in the loop about fresh content and the latest news on our community. Embrace this opportunity to stay connected and engaged with our vibrant community as we celebrate a century of remarkable achievements. Don't miss out – subscribe now and be a part of our ongoing legacy!.
+        {% endblocktrans %}
+        </p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-light">
           <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
+            <label for="floatingInput">{% trans 'Email address' %}</label>
           </div>
           <div class="form-floating mb-3">
             <input type="number" class="form-control" id="floatingPassword" placeholder="Phone Number">
-            <label for="floatingPassword">Phone Number</label>
+            <label for="floatingPassword">{% trans 'Phone Number' %}</label>
           </div>  
           <hr class="my-4">        
-          <button class="w-100 btn btn-lg btn-primary" type="submit">Subscribe</button>
+          <button class="w-100 btn btn-lg btn-primary" type="submit">{% trans 'Subscribe' %}</button>
           <hr class="my-4">
-          <small class="text-body-secondary">You have the flexibility to provide either your email address,phone number or both– choose whichever works best for you.</small>
+          <small class="text-body-secondary">
+          {% blocktrans %}
+            You have the flexibility to provide either your email address,phone number or both– choose whichever works best for you.
+          {% endblocktrans %}
+          </small>
         </form>
       </div>
     </div>
