--- a/app/templates/past_event.html
+++ b/app/templates/past_event.html
@@ -28,7 +28,7 @@
             </div>
             {% endfor %}
             <div class="col-12 text-center mt-3">
-                <a href="{% url 'album' child_category_id=child_category.id %}" class="btn btn-primary">View More</a>
+                <a href="{% url 'album' child_category_id=child_category.id %}" class="btn btn-primary">{% trans 'View More' %}</a>
             </div>
         </div>
     </div>
