--- a/app/templates/video_list.html
+++ b/app/templates/video_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block title %}About Us - My Django App{% endblock %}
 
 {% block content %}
@@ -27,11 +27,11 @@
             Your browser does not support the video tag.
           </video>
           <div class="card-body">
-            <p class="card-text">Part {{ part.part_number }}: {{ video.title }}</p>
+            <p class="card-text">{% trans 'Part ' %}{{ part.part_number }}: {{ video.title }}</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group text-center">
                 
-                <a href="{% url 'video_player' video.id %}" class="btn btn-outline-primary ">Watch Now</a>
+                <a href="{% url 'video_player' video.id %}" class="btn btn-outline-primary ">{% trans 'Watch Now' %}</a>
               </div>
               
             </div>
