--- a/app/templates/75years.html
+++ b/app/templates/75years.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block title %}75 YEARS CELEBRATION{% endblock %}
+{% block title %}{% trans '75 YEARS CELEBRATION' %}{% endblock %}
 
 {% block content %}
 {% load static %}
