--- a/app/templates/sports.html
+++ b/app/templates/sports.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block title %}Sports{% endblock %}
+{% block title %}{% trans 'Sports Overview' %}{% endblock %}
 
 {% block content %}
 {% load static %}
