--- a/app/templates/pdf_viewer.html
+++ b/app/templates/pdf_viewer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Viewer</title>
+    <title>book Viewer</title>
     <link rel="stylesheet" href="{% static 'pdfjs/web/viewer.css' %}">
 </head>
 <body>
