--- a/app/templates/video_list.html
+++ b/app/templates/video_list.html
@@ -9,9 +9,9 @@
 {% for video in videos %}
 <section class="py-1 text-center container">
   <div class="row py-lg-5">
-    <div class="col-lg-8 col-md-8 mx-auto">
-      <h1 class="fw-light text-light">{{ video.title }}</h1>
-      <p class="lead text-light">{{ video.description }}</p>
+    <div class="col-lg-10 col-md-8 mx-auto">
+      <h1 class="fw-light text-light pb-2 border-top">{{ video.title }}</h1>
+      <p class="lead text-light ">{{ video.description }}</p>
     </div>
   </div>
 </section>
